vcs/specs/parser/fail/expressions/invalid_defer.vr
// @test: parse-fail
// @level: L0
// @tags: parser, expressions, defer, error
// @description: defer statement without body
// @expected-error: E045

fn test() {
    defer;  // defer requires expression or block
}
